# data_model_module

./: README.md  pyproject.toml
data_model_module/: raw_data_model.py  validate_decorator.py
